# excercise-backend

./: .gitignore  .pre-commit-config.yaml  Development.Dockerfile  Dockerfile  EventPublisher.Dockerfile  Production.Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-gh.yml  docker-compose-prod.yml  docker-compose-psql.yml  docker-compose-rmq.yml  docker-compose.celery.yml  docker-compose.rabbitmq-redis.yml  docker-compose.yml  env.example  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run  run.sh  run_alembic.sh  run_tests.sh  runalltests.sh  solution.md  techstack.md  techstack.yml  wait_for_it.sh
.github/workflows/: ci.yml  test.yml
alembic/: env.py
app/: api.py  celery_app.py  main.py  stock_exchange.py  types.py
app/api/: database.py  models.py  stock_exchange.py  types.py
app/api/v1/: router.py
db/: Dockerfile
db/scripts/: 01_create_postgres_role.sh  01_create_prod_db.sh  02_create_test_db.sh  03_create_postgres_role.sh  03_create_prod_db.sh
scripts/: common.sh  create_network.sh  producer_script.py  run  run.sh  start_beat.sh  start_worker.sh  wait-for-it.sh
src/app/: celery_app.py  config.py  db.py  main.py
src/app/api/: database.py  models.py  stock_exchange.py  types.py
src/event_publisher/: app.py  celery_config.py  celeryconfig.py
src/event_publisher/messaging/: rabbitmq_publisher.py
src/event_publisher/tasks/: order_tasks.py
src/ex_back/: alembic.ini  celery_app.py  config.py  database.py  db.py  main.py  models.py  types.py
src/ex_back/alembic/: env.py
src/ex_back/api/: database.py  models.py  ping.py  stock_exchange.py  types.py
src/ex_back/core/: concurrency.py  stock_exchange.py
src/messaging/: app.py  celeryconfig.py
src/messaging/scripts/: consumer_script.py
src/messaging/tasks/: consumer.py  producer.py  publisher_tasks.py
src/shared/: managers.py
tests/: conftest.py  test_app.py  test_concurrency.py  test_db.py  test_eventstore.py  test_ping.py  test_placement_error.py
(+5 files in other folders)
