[tool.poetry]
name = "excercise_backend"
version = "0.1.0"
description = "REST API for the Stock Exchange"
authors = ["Andrew Yourkin <andrew@yourkin.io>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.2"
uvicorn = {version = "0.18.3", extras = ["standard"]}
fastapi = "0.85.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.1"
asyncpg = "^0.28.0"
celery = "^5.3.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
