[tool.poetry]
name = "excercise_backend"
version = "0.2.0"
description = "REST API for the Stock Exchange"
authors = ["Andrew Yourkin <andrew@yourkin.io>"]
readme = "README.md"
packages = [{include = "ex_back", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.12"
uvicorn = {version = "0.23.2", extras = ["standard"]}
fastapi = "0.100.1"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.1"
asyncpg = "^0.28.0"
celery = "^5.3.1"
requests = "^2.31.0"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
